adjusted gitignore for cordova

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ node_modules
 /phantomjsdriver.log
 test/.browserstackrc
 test/browserstacklocal
+
+# cordova stuff
+[Pp]lugins/android.json
+[Pp]lugins/windows.json
+[Pp]lugins/wp8.json
+[Pp]lugins/remote_ios.json
+[Pp]latforms/
+.vs
+*.jsproj.user
+bin
+bld
+plugins
